--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso-intro-react",
+  "name": "todo-app-curso-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
