Se corrige homepage en el package.json

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "3.2.3"
   },
-  "homepage": "https://Solej77.github.io/todo-app-curso-react.git"
+  "homepage": "https://solej77.github.io/todo-app-curso-react/"
 }
